fixed service card spacing with gap and made style changes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,13 +25,6 @@ body {
     width: 50px;
 }
 
-.bg-image {
-    background-image: url('./images/DashboardAssets/experience.jpg');
-    background-size: 100% 100%;
-    padding-top: 100px;
-    padding-bottom: 100px;
-}
-
 .right-image-1 {
     background-image: url('./images/DashboardAssets/builddream.jpg');
     background-size: cover;
@@ -45,46 +38,47 @@ body {
     background-image: url('./images/DashboardAssets/kitchen.jpg');
     background-size:cover;
     background-position: center right 35%;
-    padding: 150px 20px 150px 20px;
+    gap: 180px;
+    padding: 50px 0px 50px 0px;
 }
 
 .card-image-2 {
     background-image: url('./images/DashboardAssets/bathremodel.jpg');
     background-size:cover;
-    background-position: center right 30%;
-    padding: 150px 20px 150px 20px;
+    background-position: center left 15%;
+    gap: 180px;
+    padding: 50px 0px 50px 0px;
 }
 
 .card-image-3 {
     background-image: url('./images/DashboardAssets/deck.jpg');
     background-size:cover;
     background-position: center center;
-    padding: 150px 20px 150px 20px;
+    gap: 180px;
+    padding: 50px 0px 50px 0px;
 }
 
 .card-image-4 {
     background-image: url('./images/DashboardAssets/remodel.jpg');
     background-size:cover;
     background-position: center center;
-    padding: 150px 20px 150px 20px;
+    gap: 180px;
+    padding: 50px 0px 50px 0px;
 }
 
 .card-image-5 {
     background-image: url('./images/DashboardAssets/custom.jpg');
     background-size:cover;
     background-position: center center;
-    padding: 150px 20px 150px 20px;
+    gap: 180px;
+    padding: 50px 0px 50px 0px;
 }
 
 .browse-now-button {
-    @apply text-white bg-[#2557D6] hover:bg-[#2557D6]/90 focus:ring-4 focus:ring-[#2557D6]/50 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:focus:ring-[#2557D6]/50
+    @apply text-white bg-[#e79326] hover:bg-[#ffaa3c]/90 focus:ring-4 focus:ring-[#2557D6]/50 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:focus:ring-[#2557D6]/50
 }
 
 .call-us-button {
-    @apply text-black bg-[#FF9119] hover:bg-[#FF9119]/80 focus:ring-4 focus:outline-none focus:ring-[#FF9119]/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:hover:bg-[#FF9119]/80 dark:focus:ring-[#FF9119]/40 mr-2 mb-4
-}
-
-.custom-container {
-    margin: 15px;
+    @apply bg-[#3351fc] hover:bg-[#4460ff]/80 focus:ring-4 focus:outline-none focus:ring-[#4460ff]/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:hover:bg-[#3351fc]/80 dark:focus:ring-[#4460ff]/40 mr-2 mb-4 text-white
 }
 
